# DMARL_Game

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-latex.yml
examples/: render_coin_game_gif.py  run_random_coin_game.py
paper/tex/: .latexmkrc  main.tex
src/rl_lab/: __init__.py  envs.py
tests/: test_envs.py
